[package]
name = "whisp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
glib = "0.22.4"
gtk = { package = "gtk4", version = "0.11.2", features = ["v4_10"] }
gtk4-layer-shell = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
